footer home align, et retirer le copyright text

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -60,6 +60,10 @@
     border-left: 2px solid #eaeaea;
     border-right: 2px solid #eaeaea;
     height: 110px;
+    .img-txt { margin-bottom: 10px; }
+  }
+  .right-home-footer .img-logo {
+    margin-top: 25px;
   }
 }
 
