--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -138,14 +138,14 @@
 
 
     <div class="col-md-5 hidden-xs middle-home-footer" style="color: black;">
-     <%= image_tag "Newsletter_bottom.png", class: "img-responsive center-block" %>     
+     <%= image_tag "Newsletter_bottom.png", class: "img-responsive center-block img-txt" %>     
      <%= render "static_pages/home/mail_retriever" %>
     </div>
 
 
-    <div class="col-md-3">
-      <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: "80", class: "center-block img-responsive" %>
-      <div class="text-center small">© EvryGamesCity</div>
+    <div class="col-md-3 right-home-footer">
+      <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: "80", class: "center-block img-responsive img-logo" %>
+      <!--div class="text-center small">© EvryGamesCity</div-->
     </div>
 
   </div>
