mise en page : informations

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -29,11 +29,16 @@ body.girls {
 }
 
 
-
-
+.tabule {
+  margin-left: 10px;
+}
 .bold {
   font-family: "eurostyle-bold";
 }
+.orange {
+  color: $orange;
+}
+
 
 .container {
   max-width: 970px;
