--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -59,12 +59,14 @@
         <h4>ACCES</h4>
       </div>
       <div class="panel-body">
-        <p><h3>Adresse</h3> Arènes de l'Agora, 91000 Évry.<br /><br />
-           <h3>Par le RER D</h3>
+        <p><h4 class="orange">Adresse</h4>
+           Arènes de l'Agora, 91000 Évry.<br />
+           <h4 class="orange">RER D</h4>
            Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes).<br />
-           <h3>Par la route</h3>
-           <big>A6 depuis Paris</big> direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br /><br />
-           <big>Autobus TICE</big> arrêt Gare SNCF ou Agora</p>
+           <h4 class="orange">Voiture</h4>
+           A6 depuis Paris direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br />
+           <h4 class="orange">Autobus TICE</h4>
+           Arrêt Gare SNCF ou Agora</p>
       </div>
     </div>
 
@@ -80,21 +82,27 @@
         <h4>TARIFS</h4>
       </div>
       <div class="panel-body">
-        <p><h3>Public</h3>
-        <h4>En prévente</h4>
+        <h4 class="orange">Public</h4>
+        <div class="tabule">
+        <h4 class="orange">En prévente</h4>
+          <div class="tabule">
           Plein Tarif : 15€<br />
           Tarif réduit  - jeune (7 - 18ans inclus) : 10€<br />
           Tarif réduit - étudiant : 10€<br />
           Journée du samedi pour tous : 16€
-
-        <h4>A l’entrée</h4>
+          </div>
+        <h4 class="orange">A l’entrée</h4>
+          <div class="tabule">
           Plein tarif : 16€<br />
           Tarif réduit - jeune (7 - 18ans inclus) : 11€<br />
           Tarif réduit - étudiant : 11€<br />
           Journée du samedi pour tous : 16€<br />
-        <h3>Joueurs</h3>
-          Préinsciption : 35 € par joueur 
-        </p> 
+          </div>
+        </div>
+
+        <h4 class="orange">Joueurs</h4>
+          <div class="tabule">Préinsciption : 35 € par joueur </div>
+
       </div>
     </div>
 
