mise ne page : jeux

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -15,8 +15,8 @@
     <h4>REGLES</h4>
   </div>
   <div class="panel-body">
-    <h2>Tournoi 16 slots avec des qualifications online.</h3>
-    <big>Déroulement  sur place : </big><br />
+    <h4>Tournoi 16 slots avec des qualifications online.</h4>
+    <h4 class="orange">Déroulement  sur place : </h4>
     <ul>
       <li>Phase de poule en BO1</li>
       <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
