--- a/app/views/jeux/hs.html.erb
+++ b/app/views/jeux/hs.html.erb
@@ -15,8 +15,8 @@
     <h4>REGLES</h4>
   </div>
   <div class="panel-body">
-    <h2>Tournois 32 slots sur inscriptions.</h3>
-    <big>Déroulement  sur place : </big><br />
+    <h4>Tournois 32 slots sur inscriptions.</h4>
+    <h4  class="orange">Déroulement  sur place : </h4>
     <ul>
       <li>Phase de poule en BO1</li>
       <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
