mise en page : presentation + autobus

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -65,8 +65,8 @@
            Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes).<br />
            <h4 class="orange">Voiture</h4>
            A6 depuis Paris direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br />
-           <h4 class="orange">Autobus TICE</h4>
-           Arrêt Gare SNCF ou Agora</p>
+           <h4 class="orange">Autobus</h4>
+           Autobus TICE, arrêt Gare SNCF ou Agora</p>
       </div>
     </div>
 
