--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -9,16 +9,16 @@
 
     <%= image_tag "Header_presentation2.jpg", class: "img-responsive" %>
 
-    <h3>Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h3>
+    <h4 class="orange">Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4>
     <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
 
-    <h3>Une expérience « so gaming »</h3>
+    <h4 class="orange">Une expérience « so gaming »</h4>
     <ul>
       <li>Une gaming zone , le village des gamers et des éditeurs, ouverte à tous petits et grands, pour vivre un moment unique autour de toutes les nouveautés, des zones de test, des bornes de jeu en libre service.</li>
       <li>Des live show</li>
     </ul>
 
-    <h3>Un main event en apothéose</h3>
+    <h4 class="orange">Un main event en apothéose</h4>
     <ul>
       <li>La lanparty géante organisée avec le soutien opérationnel de l’EGS , qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stards du jeu video sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone</li>
       <li>Une grande finale Dimanche 26 Avril avec des cash prize à la hauteur de l’événement avec plus de 10 000 eur  de dotation mise en jeux</li>
