--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -15,7 +15,7 @@
 
       <div class="panel-body text-center">
         <%= image_tag t("#{infotag}.logo"), class: "infologo-center" %>
-        <div class="info-text"><%= t("#{infotag}.mosaique-text") %></div>
+        <span class="info-text"><%= t("#{infotag}.mosaique-text") %></span>
       </div>
     </a>
   </div>
