hidden-xs sur barre blanche entre partenaires et infos, dans home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -70,7 +70,7 @@
             </div>
             <div class="panel-body">
               <!-- SnapWidget -->
-              <iframe class="center-block" src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMTV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=171214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height:300px"></iframe>
+              <iframe class="center-block embed-responsive-item" src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMTV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=171214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height:300px"></iframe>
             </div>
           </div>
         </div>
@@ -89,6 +89,9 @@
   </div>
 
 
+  <div class ="row visible-xs">
+    <div class="col-md-12" style="border-top: 2px solid #eaeaea;"></div>
+  </div>
 
   <div class="row partenaires">
     <%= render "static_pages/partenaires/partenaire_carousel" %>
