--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -69,10 +69,10 @@
               <h4><%= image_tag "Instagram_Menu_icon_1.png", alt: "Instagram", style: "margin-top: -5px; margin-right: 5px;" %>INSTAGRAM #EVRYGAMESCITY</h4>
             </div>
             <div class="panel-body">
-              <!-- SnapWidget -->
-              <!--iframe class="center-block embed-responsive-item" src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMTV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=171214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height:300px"></iframe-->
+              <!-- INSTANSIVE WIDGET user:EvryGamesCity --><script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/c96c5ecc80f56927654cfedf708d5cfa6f3d1a78.html" id="instansive_c96c5ecc80" name="instansive_c96c5ecc80"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 
-              <!-- INSTANSIVE WIDGET --><script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/d83491ec20dff15d8f39834213f6e31e842ec146.html" id="instansive_d83491ec20" name="instansive_d83491ec20"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+
+              <!-- INSTANSIVE WIDGET hashtag:EGVRYGAMESCITY--><!--script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/d83491ec20dff15d8f39834213f6e31e842ec146.html" id="instansive_d83491ec20" name="instansive_d83491ec20"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe-->
             </div>
           </div>
         </div>
