changement d'image de presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -7,7 +7,7 @@
 
   <div class="panel-body">
 
-    <%= image_tag "Header_presentation2.jpg", class: "img-responsive" %>
+    <%= image_tag "Header_presentation2_bis.jpg", class: "img-responsive" %>
 
     <h4 class="orange">Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4>
     <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
