enlevage de guillemets pas jeunes

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -9,10 +9,10 @@
 
     <%= image_tag "Header_presentation2_bis.jpg", class: "img-responsive" %>
 
-    <h4 class="orange">Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4>
+    <h4 class="orange">Evry Games City, c’est le rendez-vous jeunesse pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4>
     <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
 
-    <h4 class="orange">Une expérience « so gaming »</h4>
+    <h4 class="orange">Une expérience so gaming</h4>
     <ul>
       <li>Une gaming zone , le village des gamers et des éditeurs, ouverte à tous petits et grands, pour vivre un moment unique autour de toutes les nouveautés, des zones de test, des bornes de jeu en libre service.</li>
       <li>Des live show</li>
