--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -34,7 +34,16 @@
     <h3>Evry, ville numérique</h3>
   </div>
   <div class="panel-body">
-    <span>...</span>
+    <span><h4 class="orange">Évry ville connectée</h4>
+   Ambition majeure de la Ville d’Évry, le numérique est plus que jamais implanté sur notre territoire. Salles informatiques renforcées, partage de contenus, accès à internet amélioré, l’école 2.0 est bien installée à Évry ! Grâce aux nombreuses grandes écoles présentes, Télécom Sud Paris, l’ENSIIE ou encore Télécom École de Management, l’informatique est l’un des atouts de notre territoire.<br /><br />
+
+Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations. L’objectif : une couverture complète d’ici la fin 2018. Déjà, 33% de couverture fin 2015 !<br />
+Rejoignez la Ville d’Évry sur Facebook, Twitter, Instagram et evry.fr !
+
+    <h4 class="orange">La jeunesse, au cœur d’Évry</h4>
+   
+25 000. Voilà un chiffre impressionnant. Près de 25 000 personnes ont moins de 30 ans à Évry, ville la plus jeune de France. Parallèlement, notre territoire accueille 16 000 étudiants qui viennent tout au long de l’année faire leurs études. Logiquement, la jeunesse est au cœur de nos ambitions, de nos projets. Citoyens en devenir, porteurs de rêves, de propositions, les 15-30 ans sont prêts à relever les nombreux défis qui les attendent. Leur rôle : devenir acteur de leur vie, de leur ville, de leur pays. Le rôle de la municipalité: les accompagner, les encourager, leur donner les moyens d’atteindre leurs objectifs, quels qu’ils soient, transformer leur dynamisme, leur motivation en réussite.
+    </span>
   </div>
 </div>
 
@@ -44,11 +53,15 @@
     <h3>L’ENSIIE, grande école d’excellence</h3>
   </div>
   <div class="panel-body">
-    <span>L’ENSIIE (École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) est une des plus anciennes écoles délivrant le diplôme d’ingénieur en informatique. Depuis sa création, en 1968, l’ENSIIE a formé près de 3000 ingénieurs qui irriguent tous les secteurs des entreprises.<br />
-L’ENSIIE fait partie intégrante de la Communauté d’université et d’Etablissement de Paris Saclay au même titre que les grandes écoles du site  (Polytechnique, ENSTA, Télécom Paristech ou Centrale Paris).<br /><br />
+    <span><h4 class="orange">École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise - ENSIIE</h4>
 
-Depuis la rentrée, l ‘école propose une nouvelle filière : jeux video, interactions et collaborations numériques. L’ objectif  est de former des cadres supérieurs scientifiques, compétents dans le domaine des intéractions et collaborations numériques, disposant d’une expérience de travail avec des créatifs : artistes, compositeurs, designers…
+Depuis 1968, l’ENSIIE délivre un diplôme d’ingénieur en informatique. Certifiée ISOinformatique. Certifiée ISO 9001, elle accueille chaque année 130 étudiants en cycle initial, 30 en apprentissage et 40 élèves dans son antenne de Strasbourg.<br />
 
-    </span>
+L’ENSIIE tire la force du triple positionnement de sa formation, sur les mathématiques, l’informatique et l’organisation des entreprises. Les étudiants ont accès en 3ème année aux 11 masters recherche co-opérés avec l'Université de Paris-Saclay et l’Université de Strasbourg.<br />
+
+Depuis 3 ans l’ENSIIE a opéré un rapprochement pour intégrer l’Institut Mines Télécom. Avec Télécom SudParis (TSP) et Télécom École de Management (TEM), l'ENSIIE oeuvre pour faire du site d'Évry la première plate-forme nationale de formation d’ingénieurs en informatique et en TIC, tournée vers l’innovation et la création d’entreprise.<br />
+
+Depuis 2012, l’ENSIIE développe le projet de cluster ISR (Innovation Socialement Responsable) sur les jeux vidéo et l'urbanisme collaboratif. Situé sur 2500 m², en plein coeur d’Évry et labellisé par Cap Digital, le cluster a pour objectif de conjuguer recherche, formation entrepreneuriat et cultures numériques. En 2013 a été accueillie la première équipe en pré-incubation, pour favoriser le développement de maquettes et de prototypes, en septembre 2014 a été inaugurée la première formation sur les Jeux Vidéo.</span>
+
   </div>
 </div>
