--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -84,7 +84,9 @@
       <div class="panel-body">
         <h4 class="orange">Public</h4>
         <div class="tabule">
-        <h4 class="orange">En prévente</h4>
+
+        A venir
+        <!-- h4 class="orange">En prévente</h4>
           <div class="tabule">
           Plein Tarif : 15€<br />
           Tarif réduit  - jeune (7 - 18ans inclus) : 10€<br />
@@ -97,7 +99,7 @@
           Tarif réduit - jeune (7 - 18ans inclus) : 11€<br />
           Tarif réduit - étudiant : 11€<br />
           Journée du samedi pour tous : 16€<br />
-          </div>
+          </div-->
         </div>
 
         <h4 class="orange">Joueurs</h4>
