social links for ecry dans presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -38,7 +38,7 @@
    Ambition majeure de la Ville d’Évry, le numérique est plus que jamais implanté sur notre territoire. Salles informatiques renforcées, partage de contenus, accès à internet amélioré, l’école 2.0 est bien installée à Évry ! Grâce aux nombreuses grandes écoles présentes, Télécom Sud Paris, l’ENSIIE ou encore Télécom École de Management, l’informatique est l’un des atouts de notre territoire.<br /><br />
 
 Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations. L’objectif : une couverture complète d’ici la fin 2018. Déjà, 33% de couverture fin 2015 !<br />
-Rejoignez la Ville d’Évry sur Facebook, Twitter, Instagram et evry.fr !
+Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %>, Instagram et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %> !
 
     <h4 class="orange">La jeunesse, au cœur d’Évry</h4>
    
