--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -21,6 +21,9 @@
       <li>Phase de poule en BO1</li>
       <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
       <li>Finale en BO5</li>
+    </ul>
+
+    Pour plus de précisions, merci de vous référencer aux document des Masters Français du Jeu Vidéo disponibles <%= link_to "ici", "http://www.mastersjeuvideo.org/files/rules/Annexe_LoL_2014-2015.pdf", target: :blank %>
 
   </div>
 </div>
