--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -9,20 +9,15 @@
 
     <%= image_tag "Header_presentation2_bis.jpg", class: "img-responsive" %>
 
-    <h4 class="orange">Evry Games City, c’est le rendez-vous jeunesse pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4>
-    <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
-
-    <h4 class="orange">Une expérience so gaming</h4>
-    <ul>
-      <li>Une gaming zone , le village des gamers et des éditeurs, ouverte à tous petits et grands, pour vivre un moment unique autour de toutes les nouveautés, des zones de test, des bornes de jeu en libre service.</li>
-      <li>Des live show</li>
-    </ul>
-
-    <h4 class="orange">Un main event en apothéose</h4>
-    <ul>
-      <li>La lanparty géante organisée avec le soutien opérationnel de l’EGS , qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stards du jeu video sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone</li>
-      <li>Une grande finale Dimanche 26 Avril avec des cash prize à la hauteur de l’événement avec plus de 10 000 eur  de dotation mise en jeux</li>
-    </ul>
+    <h4 class="orange">Evry Games City, c’est le nouveaux rendez-vous pour les gamers d’Ile-de-France.</h4>
+    
+    <div>
+     Pour la première édition, l’ENSIIE voit grand en créant, en partenariat avec la ville d’Evry, l’événement jeu vidéo. Des compétitions, des animations, des rencontres et plus encore, aux Arènes de l’Agora, les 25 et 26 avril 2015.
+    </div>
+    <br />
+    <div>
+      La lanparty géante organisée avec le soutien opérationnel de l’EGS, qui permettra à 200 gamers de se mesurer en live pendant 2 jours avec sur les titres majeurs de l’e-sport: Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone. Une soirée sera organisée le samedi soir après la compétition, afin que les gamers et les spectateurs puissent se retrouver pour faire la fête ! La journée du Dimanche 26 Avril sera réservée aux finales, les équipes victorieuse se partageant un cash prize de 10 000 euros.
+    </div>
  
   </div>
 </div>
