--- a/app/views/static_pages/plan_du_site.html.erb
+++ b/app/views/static_pages/plan_du_site.html.erb
@@ -6,38 +6,44 @@
   </div>
 </div>
 
-<!--div class="panel transparent">
+<div class="panel transparent">
   <div class="panel-body">
+    <div class="col-md-6">
+
+      <h3><%= link_to "Home", root_path %></h3>
+
+      <h3><%= link_to "Evènement", presentation_path  %></h3>
+
+      <h3><%= link_to "Informations", informations_path %></h3>
+
+      <h3><%= link_to "Partenaires", partenaires_path %> </h3>
+
+      <h3><%= link_to "Presse", presse_path %> </h3>
+
+    </div>
+    <div class="col-md-6">
+
+      <h3>Tournois</h3>
+        <div class="tabule">
+          <div><%= link_to t('csgo.name'), jeux_csgo_path %></div>
+          <div><%= link_to t('lol.name'), jeux_lol_path %></div>
+          <div><%= link_to t('sc2.name'), jeux_sc2_path %></div>       
+          <div><%= link_to t('hs.name'), jeux_hs_path %></div>
+        </div>
 
 
-      <div><%= link_to "Home", root_path %></div>
+      <h3>Contacts</h3>
+        <div class="tabule">
+          <div><%= link_to t('egc.name'), contact_egc_path %></div>
+          <div><%= link_to t('egs.name'), contact_egs_path %></div>
+        </div>
 
-        <td><%= link_to "Informations", informations_path %></td>
-
-
-        <td>Jeux</td>
-      </tr>
-      <tr>
-        <div style="margin-left: 10px;">csgo</div>
-      </tr>
-
-
-	    lol
-	    sc2
-	    hs
-	  contacts
-	    contact egc
-	    contact egs
-	  partenaires
-	    part1
-	  règlement  
+    </div>
 
 
 
 
-
-    </table>
   </div>
-</div-->
+</div>
 
 
