image évenement changée + 2 phrases de contact

--- a/app/views/static_pages/contact_egc.html.erb
+++ b/app/views/static_pages/contact_egc.html.erb
@@ -16,7 +16,7 @@
   </div>
  
   <div class="panel-body">
-    <p>Pour toute question concernant l’organisation de l’évènement : <%= link_to t("#{contacttag}.contact"), "mailt:" + t("#{contacttag}.contact") %></p>
+    <p>Pour toute question sur l’organisation, les relations presse et les partenariats : <%= link_to t("#{contacttag}.contact"), "mailt:" + t("#{contacttag}.contact") %></p>
   </div>
 
 </div>
