--- a/app/views/static_pages/contact_egs.html.erb
+++ b/app/views/static_pages/contact_egs.html.erb
@@ -17,7 +17,7 @@
   </div>
  
   <div class="panel-body">
-    <p><%= t("#{contacttag}.presentation")%> </p>
+    <p>L’<span class="orange">ENSIIE Game Show</span> était à l’origine un projet scolaire réalisé par des étudiants de l’ENSIIE, école d’ingénieurs en informatique située à Evry. Le but était alors d’organiser un tournoi de jeux vidéo à l’époque Warcraft 3 et Counter-Strike entre école d’ingénieurs, afin d’élire au cours d’une compétition offline le meilleur joueur-élève ingénieur de France. L’idée a été reprise par le club de jeux vidéo de l’école, et c’est donc l’association LanPartIIE qui s’est chargée de l’organisation du tournoi pendant plusieurs années. Le concept a légèrement évolué et nous proposons désormais à des joueurs de toute la France de s’affronter sur CS : GO, Starcraft 2, LoL ou Heathstone. </p>
   </div>
 
 </div>
@@ -30,7 +30,7 @@
   </div>
  
   <div class="panel-body">
-    <p>Si vous avez des questions sur l'évènement gaming, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.contact_at"), "mailto:" + t("#{contacttag}.contact_at") %><br />
+    <p>Pour toute question sur la Lan Party, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.contact_at"), "mailto:" + t("#{contacttag}.contact_at") %><br />
       Si vous voulez vous associer avec l'équipe qui gère l'évènement, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.partenaires_at"), "mailto:" + t("#{contacttag}.partenaires_at") %> </p>
   </div>
 
