texte presentation evenement

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -9,15 +9,31 @@
 
     <%= image_tag "Header_presentation2_ter.jpg", class: "img-responsive" %>
 
-    <h4 class="orange">Evry Games City, c’est le nouveaux rendez-vous pour les gamers d’Ile-de-France.</h4>
+    <h4 class="orange small_bold">Evry Games City, le nouveau rendez-vous dédié aux jeux vidéo.</h4>
     
     <div>
-     Pour la première édition, l’ENSIIE voit grand en créant, en partenariat avec la ville d’Evry, l’événement jeu vidéo. Des compétitions, des animations, des rencontres et plus encore, aux Arènes de l’Agora, les 25 et 26 avril 2015.
+     Pour la première édition, l’Ensiie (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) voit grand en créant, en partenariat avec la ville d’Evry, l’événement jeu video les 25 et 26 Avril 2015 aux Arènes de l’Agora.
     </div>
     <br />
+
     <div>
-      La lanparty géante organisée avec le soutien opérationnel de l’EGS, qui permettra à 200 gamers de se mesurer en live pendant 2 jours avec sur les titres majeurs de l’e-sport: Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone. Une soirée sera organisée le samedi soir après la compétition, afin que les gamers et les spectateurs puissent se retrouver pour faire la fête ! La journée du Dimanche 26 Avril sera réservée aux finales, les équipes victorieuse se partageant un cash prize de 10 000 euros.
+      Avec plus de 2 000 visiteurs attendus, ce nouveau rendez vous ludique et festif se veut ouvert à tous les publics, passionnés, amateurs ou tout simplement curieux. Evry Games City, c’est 2 jours de programmation et d’expériences uniques autour de l’univers du jeu video : des compétitions, des animations, des espaces de découvertes et de rencontres.
     </div>
+    <br />
+
+      <div class="tabule">
+        <span class="orange small_bold">1. Le village des cultures numériques.</span>
+      Construit comme un hub du jeu video, cet espace interactif propose à chaque visiteur un parcours expérientiel dans l’univers du jeu video. Au travers de différents points de rencontres, il offre la possibilité à chacun de s’informer, d’explorer, ou de s’essayer à différents scénarios (formation, recherche, entreprenariat, innovations, projets en cours, démonstrations, zone de jeu) tout en permettant les échanges avec les acteurs majeur du territoire.
+      </div><br />
+      <div class="tabule">
+        <span class="orange small_bold">2. Une lanparty géante</span>
+      organisée avec le soutien opérationnel de l’EGS, qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stars du jeu vidéo sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone, avec en main event une grande finale, dimanche 26 avril, à la hauteur de l’événement avec plus de 10 000 euros de cash prizes mis en jeux
+      </div><br />
+      <div class="tabule">
+        <span class="orange small_bold">3. Une grande soirée de 20h à 23h30</span>
+      avec des concerts live, un DJ, des démos jeux video et de nombreuses animations sur scène.
+      </div>
+
  
   </div>
 </div>
@@ -29,13 +45,13 @@
     <h3>Evry, ville numérique</h3>
   </div>
   <div class="panel-body">
-    <span><h4 class="orange">Évry ville connectée</h4>
+    <span><h4 class="orange small_bold">Évry ville connectée</h4>
    Ambition majeure de la Ville d’Évry, le numérique est plus que jamais implanté sur notre territoire. Salles informatiques renforcées, partage de contenus, accès à internet amélioré, l’école 2.0 est bien installée à Évry ! Grâce aux nombreuses grandes écoles présentes, Télécom Sud Paris, l’ENSIIE ou encore Télécom École de Management, l’informatique est l’un des atouts de notre territoire.<br /><br />
 
-Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations. L’objectif : une couverture complète d’ici la fin 2018. Déjà, 33% de couverture fin 2015 !<br />
-Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %>, Instagram et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %> !
+Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations. <span class="orange">L’objectif : une couverture complète d’ici la fin 2018</span>. Déjà, 33% de couverture fin 2015 !<br /><br />
+Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %>, Instagram et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %> !<br /><br />
 
-    <h4 class="orange">La jeunesse, au cœur d’Évry</h4>
+    <h4 class="orange small_bold">La jeunesse, au cœur d’Évry</h4>
    
 25 000. Voilà un chiffre impressionnant. Près de 25 000 personnes ont moins de 30 ans à Évry, ville la plus jeune de France. Parallèlement, notre territoire accueille 16 000 étudiants qui viennent tout au long de l’année faire leurs études. Logiquement, la jeunesse est au cœur de nos ambitions, de nos projets. Citoyens en devenir, porteurs de rêves, de propositions, les 15-30 ans sont prêts à relever les nombreux défis qui les attendent. Leur rôle : devenir acteur de leur vie, de leur ville, de leur pays. Le rôle de la municipalité: les accompagner, les encourager, leur donner les moyens d’atteindre leurs objectifs, quels qu’ils soient, transformer leur dynamisme, leur motivation en réussite.
     </span>
@@ -50,11 +66,11 @@ Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.c
   <div class="panel-body">
     <span><h4 class="orange">École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise - ENSIIE</h4>
 
-Depuis 1968, l’ENSIIE délivre un diplôme d’ingénieur en informatique. Certifiée ISOinformatique. Certifiée ISO 9001, elle accueille chaque année 130 étudiants en cycle initial, 30 en apprentissage et 40 élèves dans son antenne de Strasbourg.<br />
+Depuis 1968, l’ENSIIE délivre un diplôme d’ingénieur en informatique. Certifiée ISOinformatique. Certifiée ISO 9001, elle accueille chaque année 130 étudiants en cycle initial, 30 en apprentissage et 40 élèves dans son antenne de Strasbourg.<br /><br />
 
-L’ENSIIE tire la force du triple positionnement de sa formation, sur les mathématiques, l’informatique et l’organisation des entreprises. Les étudiants ont accès en 3ème année aux 11 masters recherche co-opérés avec l'Université de Paris-Saclay et l’Université de Strasbourg.<br />
+L’ENSIIE tire la force du triple positionnement de sa formation, sur les mathématiques, l’informatique et l’organisation des entreprises. Les étudiants ont accès en 3ème année aux 11 masters recherche co-opérés avec l'Université de Paris-Saclay et l’Université de Strasbourg.<br /><br />
 
-Depuis 3 ans l’ENSIIE a opéré un rapprochement pour intégrer l’Institut Mines Télécom. Avec Télécom SudParis (TSP) et Télécom École de Management (TEM), l'ENSIIE oeuvre pour faire du site d'Évry la première plate-forme nationale de formation d’ingénieurs en informatique et en TIC, tournée vers l’innovation et la création d’entreprise.<br />
+Depuis 3 ans l’ENSIIE a opéré un rapprochement pour intégrer l’Institut Mines Télécom. Avec Télécom SudParis (TSP) et Télécom École de Management (TEM), l'ENSIIE oeuvre pour faire du site d'Évry la première plate-forme nationale de formation d’ingénieurs en informatique et en TIC, tournée vers l’innovation et la création d’entreprise.<br /><br />
 
 Depuis 2012, l’ENSIIE développe le projet de cluster ISR (Innovation Socialement Responsable) sur les jeux vidéo et l'urbanisme collaboratif. Situé sur 2500 m², en plein coeur d’Évry et labellisé par Cap Digital, le cluster a pour objectif de conjuguer recherche, formation entrepreneuriat et cultures numériques. En 2013 a été accueillie la première équipe en pré-incubation, pour favoriser le développement de maquettes et de prototypes, en septembre 2014 a été inaugurée la première formation sur les Jeux Vidéo.</span>
 
