--- a/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
@@ -1,6 +1,6 @@
 
 
-<% nbpart = 7 %>
+<% nbpart = 4 %>
 <% nb_display = 6 %>
 
 <div class="carousel-partenaires">
@@ -10,7 +10,8 @@
     <% (1..nbpart).each do |i| %>
       <div class="item <%= "active" if i == 1 %>">
         <div class="row">
-          <% display_a = (i..nbpart).to_a.concat((1..(i - 1)).to_a).take(nb_display) %>
+          <%# display_a = (i..nbpart).to_a.concat((1..(i - 1)).to_a).take(nb_display) %>
+          <% display_a = (1..nbpart) %>
           <% display_a.each do |j| %>
             <div class="col-md-2 mosaique-container">
               <%#= image_tag t("partenaire-#{j}.image"),
