modifs des textes de presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -9,7 +9,7 @@
 
     <%= image_tag "Header_presentation2_ter.jpg", class: "img-responsive" %>
 
-    <h4 class="orange small_bold">Evry Games City, le nouveau rendez-vous dédié aux jeux vidéo.</h4>
+    <h4 class="orange small_bold">Evry Games City, le nouveau rendez-vous dédié aux jeux vidéo</h4>
     
     <div>
      Pour la première édition, l’Ensiie (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) voit grand en créant, en partenariat avec la ville d’Evry, l’événement jeu video les 25 et 26 Avril 2015 aux Arènes de l’Agora.
@@ -22,16 +22,16 @@
     <br />
 
       <div class="tabule">
-        <span class="orange small_bold">1. Le village des cultures numériques.</span>
+        <span class="orange small_bold">1. Le village des cultures numériques : </span>
       Construit comme un hub du jeu video, cet espace interactif propose à chaque visiteur un parcours expérientiel dans l’univers du jeu video. Au travers de différents points de rencontres, il offre la possibilité à chacun de s’informer, d’explorer, ou de s’essayer à différents scénarios (formation, recherche, entreprenariat, innovations, projets en cours, démonstrations, zone de jeu) tout en permettant les échanges avec les acteurs majeur du territoire.
       </div><br />
       <div class="tabule">
-        <span class="orange small_bold">2. Une lanparty géante</span>
-      organisée avec le soutien opérationnel de l’EGS, qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stars du jeu vidéo sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone, avec en main event une grande finale, dimanche 26 avril, à la hauteur de l’événement avec plus de 10 000 euros de cash prizes mis en jeux
+        <span class="orange small_bold">2. Une lanparty géante : </span>
+      Organisée avec le soutien opérationnel de l’EGS, qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stars du jeu vidéo sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone, avec en main event une grande finale, dimanche 26 avril, à la hauteur de l’événement avec plus de 10 000 euros de cash prizes mis en jeu.
       </div><br />
       <div class="tabule">
-        <span class="orange small_bold">3. Une grande soirée de 20h à 23h30</span>
-      avec des concerts live, un DJ, des démos jeux video et de nombreuses animations sur scène.
+        <span class="orange small_bold">3. Une grande soirée de 20h à 23h30 : </span>
+      Un show "So Gaming" avec des concerts live, un DJ, des démos jeux video et de nombreuses animations sur scène.
       </div>
 
  
@@ -48,8 +48,10 @@
     <span><h4 class="orange small_bold">Évry ville connectée</h4>
    Ambition majeure de la Ville d’Évry, le numérique est plus que jamais implanté sur notre territoire. Salles informatiques renforcées, partage de contenus, accès à internet amélioré, l’école 2.0 est bien installée à Évry ! Grâce aux nombreuses grandes écoles présentes, Télécom Sud Paris, l’ENSIIE ou encore Télécom École de Management, l’informatique est l’un des atouts de notre territoire.<br /><br />
 
-Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations. <span class="orange">L’objectif : une couverture complète d’ici la fin 2018</span>. Déjà, 33% de couverture fin 2015 !<br /><br />
-Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %>, Instagram et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %> !<br /><br />
+Sans compter que la Fibre optique arrive. Une convention entre Orange, les Villes d’Évry et de Ris-Orangis et l’Agglomération Évry Centre Essonne a récemment été signée pour permettre le déploiement de l’internet à très haut débit dans tous les quartiers, dans toutes les habitations.<br />
+
+L’objectif : une couverture complète d’ici la fin 2018 ( déjà, 33% de couverture fin 2015 )<br /><br />
+Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %> et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %>.<br /><br />
 
     <h4 class="orange small_bold">La jeunesse, au cœur d’Évry</h4>
    
@@ -64,7 +66,7 @@ Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.c
     <h3>L’ENSIIE, grande école d’excellence</h3>
   </div>
   <div class="panel-body">
-    <span><h4 class="orange">École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise - ENSIIE</h4>
+    <span><h4 class="orange small_bold">École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise - ENSIIE</h4>
 
 Depuis 1968, l’ENSIIE délivre un diplôme d’ingénieur en informatique. Certifiée ISOinformatique. Certifiée ISO 9001, elle accueille chaque année 130 étudiants en cycle initial, 30 en apprentissage et 40 élèves dans son antenne de Strasbourg.<br /><br />
 
