--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -1,3 +1,9 @@
+<div class="panel transparent">
+  <div class="panel-body text-center bold">
+    <h1 class="contact-title"> Evry Games City 2015 </h1>
+    Première édition
+  </div>
+</div>
 
 <div class="panel transparent">
 
