logo ville d'evry dans presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -59,6 +59,8 @@ Sans compter que la Fibre optique arrive. Une convention entre Orange, les Ville
 L’objectif : une couverture complète d’ici la fin 2018 ( déjà, 33% de couverture fin 2015 )<br /><br />
 Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %> et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %>.<br /><br />
 
+<%= image_tag t("partenaire-3.image"), class: "img-responsive" %>
+
     <h4 class="orange small_bold">La jeunesse, au cœur d’Évry</h4>
    
 25 000. Voilà un chiffre impressionnant. Près de 25 000 personnes ont moins de 30 ans à Évry, ville la plus jeune de France. Parallèlement, notre territoire accueille 16 000 étudiants qui viennent tout au long de l’année faire leurs études. Logiquement, la jeunesse est au cœur de nos ambitions, de nos projets. Citoyens en devenir, porteurs de rêves, de propositions, les 15-30 ans sont prêts à relever les nombreux défis qui les attendent. Leur rôle : devenir acteur de leur vie, de leur ville, de leur pays. Le rôle de la municipalité: les accompagner, les encourager, leur donner les moyens d’atteindre leurs objectifs, quels qu’ils soient, transformer leur dynamisme, leur motivation en réussite.
