--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="panel-body">
         <p>Samedi 25 et Dimanche 26 Avril 2015<br />
-           De 09h00 à minuit.</p>
+           De 09h00 à 23h30</p>
       </div>
     </div>
 
@@ -48,8 +48,8 @@
         <h4>TOURNOIS</h4>
       </div>
       <div class="panel-body">
-        <p>Samedi 25 Avril : phases de qualification<br />
-           Dimanche 26 Avril : finales</p>
+        <p>Samedi 25 Avril : Phases de qualification<br />
+           Dimanche 26 Avril : Finales</p>
       </div>
     </div>
 
@@ -60,11 +60,11 @@
       </div>
       <div class="panel-body">
         <p><h4 class="orange">Adresse</h4>
-           Arènes de l'Agora, 91000 Évry.<br />
+           Arènes de l'Agora, 91000 Évry<br />
            <h4 class="orange">RER D</h4>
-           Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes).<br />
+           Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil - Malesherbes, station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes)<br />
            <h4 class="orange">Voiture</h4>
-           A6 depuis Paris direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br />
+           A6 depuis Paris direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe<br />
            <h4 class="orange">Autobus</h4>
            Autobus TICE, arrêt Gare SNCF ou Agora</p>
       </div>
