--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,8 @@
   <div class="container">
     <%= link_to "Contact", contact_egc_path %>
     <span> - </span> 
+    <%= link_to "Informations légales", informations_legales_path %>
+    <span> - </span> 
     <%= link_to "Plan du site", plan_du_site_path %>
   </div>
 </footer>
