balise meta description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <%= javascript_include_tag "application" %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="description" content="Le nouveau grand rendez-vous des amateurs et des passionnés du jeu vidéo en France. 
+Le 25 et 26 avril 2015 à Evry Centre Essonne aux Arènes de l'Agora." />
 
   <!-- BOOTSTRAP -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
